--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+# Prisma
+packages/db/prisma/*.db
+packages/db/prisma/migrations/*.sql.backup
+
+# Docker
+docker-compose.override.yml
+
+# pnpm store
+.pnpm-store/
