Add CORS and API Key configuration options to .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,11 @@ DATABASE_URL=postgresql://muninsbok:muninsbok@localhost:5432/muninsbok
 HOST=0.0.0.0
 PORT=3000
 
+# CORS — allowed origin (defaults to http://localhost:5173)
+# CORS_ORIGIN=http://localhost:5173
+
+# API Key — set to enable Bearer token authentication (optional)
+# API_KEY=your-secret-key-here
+
 # Frontend (for development)
 VITE_API_URL=http://localhost:3000
