--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "db:push": "pnpm --filter @muninsbok/db push"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/node": "^20.11.0",
     "typescript": "^5.9.3"
   },
