--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.1.0",
+    "@fastify/rate-limit": "^9.1.0",
     "@muninsbok/core": "workspace:*",
     "@muninsbok/db": "workspace:*",
     "dotenv": "^17.3.1",
