Add NODE_ENV variable to .env.example for environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment (development | production | test)
+NODE_ENV=development
+
 # Database
 DATABASE_URL=postgresql://muninsbok:muninsbok@localhost:5432/muninsbok
 
